# torture-bench

./: .gitattributes  .gitignore  Bench.code-workspace  CLASS_GUIDE.md  CMakeLists.txt  README.md  bench.ps1  bench.sh  build.bat  build.sh  build_release.ps1  detect_arch.py  package_native.ps1  package_native.sh  run_and_submit.bat  run_and_submit.sh
.github/workflows/: bench.yml
harness/: bench_thread.h  common.h  main.c  orchestrator.c  orchestrator.h  parallel_runner.h  platform.c  platform.h  reporter.c  reporter.h
modules/: anticache_guard.c  anticache_guard.h  branch_chaos.c  cache_thrash.c  cpu_parallel.c  cpu_shared_path.h  cpu_single.c  cpu_sustained.c  crypto_stress.c  dependency_chain.c  exotic_chaos.c  hash_chain.c  ips_micro.c  lattice_geometry.c  linear_algebra.c  memory_bandwidth.c  memory_latency.c  ml_matmul.c  ooo_execution.c  pipeline_torture.c  raytracer.c  simd_dispatch.c  speculation_stress.c
results/: compare.py
tools/: tune_probe.c
